--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -69,6 +69,7 @@
     position: relative;
     text-decoration: none;
     color: #000;
+    position: relative;
 }
 .stat .stats {
     font-family: monospace;
@@ -79,6 +80,88 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.share-options{
+    position: absolute;
+    bottom: -300%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    padding: 4px;
+    transform-origin: top left;
+    transform: scale(0);
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background: rgba(15, 15, 15, 0.795);
+    color: #fff;
+    font-family: 'roboto';
+    transition: .5s;
+    transition-delay: .5s;;
+}
+
+.share-options.active{
+    transform: scale(1);
+    transition-delay: 0s;
+}
+
+.social-media{
+    opacity: 0;
+    transition: .5s;
+    transition-delay: 0s;
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 4px 7px;
+}
+
+.social-media-btn{
+    border: none;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: #000;
+    color: #fff;
+    line-height: 50px;
+    font-size: 25px;
+    cursor: pointer;
+    margin: 0 3px;
+    text-align: center;
+}
+
+.social-media-btn:nth-child(1){
+    background: #FFA654;
+}
+
+.social-media-btn:nth-child(2){
+    background: #25D366;
+}
+
+.social-media-btn:nth-child(3){
+    background: #E4405F;
+}
+
+.social-media-btn:nth-child(4){
+    background: #1DA1F2;
+}
+
+.social-media-btn:nth-child(5){
+    background: #1877F2;
+}
+
+.social-media-btn:nth-child(6){
+    background: #0A66C2;
+}
+
+.share-options.active .title,
+.share-options.active .social-media{
+    opacity: 1;
+    transition: .5s;
+    transition-delay: .5s;
+}
+
+/* Article content */
+
 .articlecontent {
     margin: 0 20%;
 }
@@ -192,7 +275,7 @@
         grid-template-columns:  1fr;
     }
     .articlemeta .meta {
-        padding: 7% 2%;
+        padding: 70px 2%;
     }
     .articlemeta #title {
         margin: 4vh 0;
