--- a/core/templates/core/feedbackModal.html
+++ b/core/templates/core/feedbackModal.html
@@ -9,6 +9,7 @@
         </div>
         
         <form class="modal-container" method="POST" action="">{% csrf_token %}
+            <input type="hidden" name="pageSource" value="{{ request.build_absolute_url }}">
             <div class="modal-section">
                 <div>
                     <textarea rows="4" type="text" style="width: 100%; padding: 4px; font-size: 14px; font-family: CrimsonPro;" placeholder="We appreciate hearing your thoughts. It helps us make things better." name="content" required></textarea>
