--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -96,15 +96,14 @@
     color: #fff;
     font-family: 'roboto';
     transition: .5s;
-    transition-delay: .5s;;
+    transition-delay: .5s;
+    z-index: 1;
 }
-
 .share-options.active{
     transform: scale(1);
     transition-delay: 0s;
 }
-
-.social-media{
+.social-share{
     opacity: 0;
     transition: .5s;
     transition-delay: 0s;
@@ -114,8 +113,7 @@
     align-items: center;
     margin: 4px 7px;
 }
-
-.social-media-btn{
+.social-share-btn{
     border: none;
     width: 24px;
     height: 24px;
@@ -128,33 +126,8 @@
     margin: 0 3px;
     text-align: center;
 }
-
-.social-media-btn:nth-child(1){
-    background: #FFA654;
-}
-
-.social-media-btn:nth-child(2){
-    background: #25D366;
-}
-
-.social-media-btn:nth-child(3){
-    background: #E4405F;
-}
-
-.social-media-btn:nth-child(4){
-    background: #1DA1F2;
-}
-
-.social-media-btn:nth-child(5){
-    background: #1877F2;
-}
-
-.social-media-btn:nth-child(6){
-    background: #0A66C2;
-}
-
 .share-options.active .title,
-.share-options.active .social-media{
+.share-options.active .social-share{
     opacity: 1;
     transition: .5s;
     transition-delay: .5s;
