blog structure change

--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -68,7 +68,7 @@
                     <a class="stat" id="sharebtn">
                         <img src="{% static 'core/media/share_black.png' %}" alt="share article" width="20" height="20" >
                         <span class="stats">0</span>
-                        <!-- <div class="share-options">
+                        <div class="share-options">
                             <div class="social-share">
                                 <a class="social-share-btn" href="https://leroybuliro.net/{{ request.build_absolute_url }}/" target="_blank">
                                     <img src="{% static 'core/media/twitterShare.png' %}" alt="twitter">
@@ -83,7 +83,7 @@
                                     <img src="{% static 'core/media/twitterShare.png' %}" alt="whatsapp">
                                 </a>
                             </div>
-                        </div> -->
+                        </div>
                     </a>
                     <div class="stat">
                         <img src="{% static 'core/media/view_black.png' %}" alt="reads" width="20" height="20" >
