--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -68,9 +68,9 @@
             
             <div class="access">
                 {% if user.is_authenticated %}
-                <a id="accessbtn" href="{% url 'account:logout' %}">Log out</a>
+                <a class="accessbtn" href="{% url 'account:logout' %}">Log out</a>
                 {% else %}
-                <a id="accessbtn" href="{% url 'account:auth' %}">Sign in</a>
+                <a class="accessbtn" href="{% url 'account:auth' %}">Sign in</a>
                 {% endif %}
             </div>
             
