--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -82,7 +82,7 @@
             </a>
             
             <div class="navmenu">
-                <a  class="navlink" href="{% url 'core:index' %}">HOME</a>
+                <!-- <a  class="navlink" href="{% url 'core:index' %}">HOME</a> -->
                 <a  class="navlink" href="{% url 'core:event' %}">EVENTS</a>
                 <a id="menuactive">BLOG</a>
                 <a class="navlink" href="{% url 'core:podcast' %}">PODCAST</a>
@@ -102,7 +102,7 @@
         </nav>
         
         <div class="mobile-menu">
-            <a href="{% url 'core:index' %}">HOME</a>
+            <!-- <a href="{% url 'core:index' %}">HOME</a> -->
             <a  href="{% url 'core:event' %}">EVENTS</a>
             <a href="#">BLOG</a>
             <a href="{% url 'core:podcast' %}">PODCAST</a>
