feedback form done, comment form done, view count redone

--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -95,7 +95,7 @@
 
                     <div class="stat">
                         <img src="{% static 'core/media/view_black.png' %}" alt="reads" width="20" height="20" >
-                        <span class="stats">{{ article.totalViews }}</span>
+                        <span class="stats">{{ article.viewsCount }}</span>
                     </div>
 
                     <a href="#commentnow" class="stat">
