--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,5 +1,6 @@
 {% include 'core/feedbackModal.html' %}
 {% load static %}
+{% load social_share %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -106,4 +107,5 @@
             </span>
         </footer>
     </body>
+    {% add_pinterest_script %}
 </html>
