--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -31,7 +31,7 @@
     margin: 0% 0% 3% 0%;
 }
 .articlemeta .meta {
-    padding: 0% 8%;
+    padding: 0 8%;
     display: grid;
     justify-items: center;
     align-content: center;
@@ -81,18 +81,18 @@
 }
 .share-options {
     position: absolute;
-    z-index: 3;
-    bottom: -0;
-    right: 0;
+    z-index: 2;
+    bottom: -70;
+    right: -200;
     width: auto;
     height: auto;
     padding: 4px;
-    transform-origin: bottom right;
-    transform: scale(0);
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
     background: rgba(15, 15, 15, 0.795);
     color: #fff;
+    transform-origin: top left;
+    transform: scale(0);
     transition: .5s;
     transition-delay: .5s;
 }
@@ -101,26 +101,29 @@
     transition-delay: 0s;
 }
 .social-share{
-    opacity: 0;
+    /* opacity: 0;
     transition: .5s;
-    transition-delay: 0s;
+    transition-delay: 0s; */
     width: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     margin: 7px 4px;
+    grid-gap: 7px;
 }
 .social-share-btn{
     border: none;
     width: 27px;
     height: 27px;
     border-radius: 50%;
-    background: #fff;
-    color: #fff;
+    object-fit: cover;
+    background: #000;
+    color: #000;
     cursor: pointer;
     margin: 0 3px;
 }
 .social-share-btn img {
+    border-radius: 50%;
     width: 100%;
     height: 100%;
 }
@@ -174,7 +177,7 @@
     font-size: 0.8em;
     line-height: 2em;
 }
-#entryend {
+.entryend {
     font-family: Permanent Marker;
     text-align: center;
     font-size: 2em;
@@ -241,7 +244,7 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 820px) {
     .articlemeta {
         grid-template-columns:  1fr;
     }
@@ -265,7 +268,7 @@
     .content ul, ol {
         line-height: 1.2em;
     }
-    #entryend {
+    .entryend {
         font-size: 1.4em;
     }
     .aboutsec {
