--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -146,7 +146,7 @@
     line-height: 2em;
 }
 .content a, a:hover {
-    color: #8b6bff;
+    color: #03bb0d;
     font-family: Josefin Sans;
     font-size: 1em;
     line-height: 2em;
