--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -71,7 +71,8 @@
                         {% endif %}
                     </div>
                     <div id="bio">
-                        <p>deejay ◊ storyteller ◊ quant</p>
+                        <!-- <p>deejay ◊ storyteller ◊ quant</p> -->
+                        <p>contact</p>
                     </div>
                 </section>
 
