--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -45,12 +45,22 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 }
 #navlogo {
     position: absolute;
-    top: 30%;
+    /* top: 30%; */
     left: 2%;
+    top: 50%;
+    transform: translate(-0%, -50%);
+    /* width: 30px;
+    height: 30px;
+    object-fit: cover; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 7px;
 }
 #navlogo > img {
     width: auto;
-    height: 17px;
+    height: 30px;
 }
 .navmenu {
     position: absolute;
@@ -58,21 +68,21 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.navlink {
-    padding: 5px 16px;
+.navmenu a {
+    padding: 5px 14px;
     text-decoration: none;
     font-size: 12px;
     color: #fff;
     font-weight: 400;
 }
-.navlink:hover {
+.navmenu a:hover {
     background-color: #ddd;
     color: #000;
 }
 #menuactive,
 #menuactive:hover {
     cursor: pointer;
-    text-decoration: line-through;
+    text-decoration: none;
     color: #000;
 }
 .access {
@@ -86,7 +96,7 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     cursor: pointer;
     font-family: Josefin Sans;
-    font-size: 14px;
+    font-size: 13px;
     color: #ffffff;
     background-color: #4b6cff;
     border-radius: 4px;
@@ -188,17 +198,17 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     .topnav {
         height: 33px;
     }
-    #navlogo {
+    /* #navlogo {
         top: 24%;
-    }
+    } */
 }
 @media screen and (max-width: 342px) {
     .topnav {
-        height: 27px;
+        height: 30px;
     }
-    #navlogo > img {
+    /* #navlogo > img {
         height: 10px;
-    }
+    } */
     .accessbtn,
     .accessbtn:hover {
         font-size: 10px;
