--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -1,224 +1,76 @@
+{% extends "core/podbase.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block page %}
+<div class="podpage">
 
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <link rel="icon" type="image/png" href="{% static 'core/media/fbl.jpg' %}">
-
-        <!-- meta -->
-        <title>{{podcast.title}} | A podcast by Leroy Buliro</title>
-        <meta name="description" content="{{podcast.description}}">
-        <meta name="keyword" content="{{podcast.tags}}">
-        <meta name="author" content="Leroy Buliro">
-
-        <!-- site meta tags-->
-        {% block meta %}
-        {% endblock meta %}
-
-        <meta name="docsearch:language" content="en">
-        <link rel="canonical" href="https://leroybuliro.com/">
-
-        <!-- Load css file -->
-        <link rel="stylesheet" href="{% static 'core/podcast.css' %}">
-
-        <!-- Load js file -->
-        <script src="{% static 'core/podcast.js' %}"></script>
-
-    </head>
-
-    <body>
-        <nav class="topnav">
-            <a id="navlogo" href="{% url 'core:index' %}">
-                <img src="{% static 'core/media/lbwhite.png' %}" alt="logo" >
-            </a>
-            <div class="navmenu">
-                <a href="{% url 'core:index' %}">HOME</a>
-                <a href="{% url 'core:blogpage' %}">BLOG</a>
-                <a id="menuactive">PODCAST</a>
+    <section id="intro">
+        <img src="{{ podcast.image.url }}" alt="{{podcast.title}}" style="width: 100%; height: auto;">
+        <div id="side">
+            <h2 style="color: #fff;">About</h2>
+            <div id="pod-deet">{{ podcast.description | safe}}</div>
+            <div class="dropdown">
+                <button class="dropbtn">LISTEN ON AN APP | ▼</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="{{ podcast.appleurl }}" target="_blank">Apple Podcasts</a>
+                    <a href="{{ podcast.googleurl }}" target="_blank">Google Podcasts</a>
+                    <a href="{{ podcast.spotifyurl }}" target="_blank">Spotify</a>
+                </div>
             </div>
-
-            <div id="access">
-                {% if user.is_authenticated %}
-                <a href="{% url 'account:logout' %}"><button class="accessbtn">Log out</button></a>
-                {% else %}
-                <a href="{% url 'account:auth' %}"><button class="accessbtn">Sign in</button></a>
-                {% endif %}
-            </div>
-
-            <div class="menu-btn">
-                <div class="menu-btn__burger"></div>
-            </div>
-        </nav>
-
-        <div class="mobile-menu">
-            <a href="{% url 'core:index' %}">HOME</a>
-            <a href="{% url 'core:blogpage' %}">BLOG</a>
-            <a href="#">PODCAST</a>
         </div>
 
-        <div class="podpage">
-
-            <section id="intro">
-                <img src="{{ podcast.image.url }}" alt="{{podcast.title}}" style="width: 100%; height: auto;">
-                <div id="side">
-                    <h2 style="color: #fff;">About</h2>
-                    <div id="pod-deet">{{ podcast.description | safe}}</div>
-                    <div class="dropdown">
-                        <button class="dropbtn">LISTEN ON AN APP | ▼</button>
-                        <div id="myDropdown" class="dropdown-content">
-                            <a href="{{ podcast.appleurl }}" target="_blank">Apple Podcasts</a>
-                            <a href="{{ podcast.googleurl }}" target="_blank">Google Podcasts</a>
-                            <a href="{{ podcast.spotifyurl }}" target="_blank">Spotify</a>
-                        </div>
-                    </div>
-                </div>
-        
-                <div class="curve">
-                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                        <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
-                    </svg>
-                </div>
-            </section>
-            
-            
-            <div class="section2">
-                <h3 style="color: #000; text-decoration: underline; margin: 0 0 30px 0;">Episodes</h3>
-                <div class="podcontainer">
-                    {% for episode in podcast.episodes.all %}
-                    <div class="podcast-epi">
-                        <!-- <a href="{% url 'core:episode' s=episode.season e=episode.id slug=episode.slug %}">
-                        </a> -->
-                        <img src="{{ episode.image.url }}" alt="{{ podcast.title|slugify }}-{{ episode.title|slugify }}" style="width: 100%; height: auto;">
-                        <p class="epi-id">#{{ episode.id }}</p>
-                        <p class="epi-deet">{{ episode.title }}</p>
-                        <div class="epi-play">
-                            <img id="pButton1" style="width: 100%; height: 100%;">
-                        </div>
-                        <audio id="episodeaudio" preload="true" >
-                            <source src="{{ episode.audio.url }}">
-                        </audio>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-        
+        <div class="curve">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+            </svg>
         </div>
-
-        <!-- <div class="episodepage">
-
-            <div class="row">
-                <div class="side">
-                    <img src="{{ episode.image.url }}" alt="{{episode.title}}" style="width: 100%; height: 100%">
-                </div>
-        
-                <div class="main">
-                    <p style="color: gray;">{{ episode.pubDate }}</p>
-                    <h3 style="padding-bottom: 4%;">{{ episode.title }}</h3>
-                    <div class="epi-content">
-                        <h4>DESCRIPTION</h4>
-                        <p>{{ episode.summary }}</p>
-        
-                        <audio id="episodeaudio" preload="true" >
-                            <source src="{{ episode.audio.url }}">
-                        </audio>
-        
-                        <div class="controls">
-                            <img class="pButton"  id="rev" src="{% static 'core/media/replay_10.png' %}" alt="replay 10 seconds">
-                            <img  class="pButton" id="pButton2" src="" alt="play episode">
-                            <img class="pButton" id="fwd" src="{% static 'core/media/forward_30.png' %}" alt="forward 30 seconds">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        
-        </div> -->
+    </section>
     
-        <div class="bottom">
-            <div id="footersocial">
-                <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT-black.png' %}" alt="twitter" width="auto" height="22" ></a>
-                <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG-black.png' %}" alt="instagram" width="auto" height="22" ></a>
-            </div>
-            <a>© 2022 Leroy Buliro. All rights reserved.</a>
-            <span>
-                <a href="{% url 'core:legal' %}">Legal</a>
-            </span>
-        </div>
-
-        <footer>
-            <div id="footer-episode" class="footerimage">
-                {% if podcast %}
-                <img src="{{ podcast.image.url }}" alt="play episode">
-                {% else %}
-                <img src="{{ episode.image.url }}" alt="play episode">
-                {% endif %}
-            </div>
-            
-            
-            <div id="timeline">
-                <div id="playhead"></div>
-                <div class="timer">00:00</div>
-                <div class="duration">00:00</div>
-            </div>
-
-            <div class="footerimage">
-                <img id="pButton3" src="" alt="">
-            </div>
-        </footer>
-
-    </body>
-    <script>
-        /* menu */
     
-    const menuBtn = document.querySelector('.menu-btn');
-    let menuOpen = false;
-    
-    menuBtn.addEventListener('click', () => {
-        const mobMenu = document.querySelector('.mobile-menu');
-        
-        if(!menuOpen){
-            menuBtn.classList.add('open');
-            mobMenu.classList.add('show');
-            menuOpen= true;
-        } else {
-            menuBtn.classList.remove('open');
-            mobMenu.classList.remove('show');
-            menuOpen = false;
-        }
-    });
-
-    /* Dropdown */
-
-    document.querySelector('.dropbtn').onclick = ()=> {
-        document.querySelector('#myDropdown').classList.toggle('show')
-    };
-
-    // Close the dropdown if the user clicks outside of the Dropdown button
-
-    window.onclick = function(event) {
-        if (!event.target.matches('.dropbtn')) {
-            var dropdowns = document.getElementsByClassName("dropdown-content");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-                var openDropdown = dropdowns[i];
-                if (openDropdown.classList.contains('show')) {
-                    openDropdown.classList.remove('show');
-                }
-            }
-        }
-    };
-    </script>
-    <noscript>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-20 text-center">
-                    <p class="no-javascript-warning">Javascript not supported on your browser, please enable Javascript in order to fully utilize the website</p>
+    <div class="section2">
+        <h3 style="color: #000; text-decoration: underline; margin: 0 0 30px 0;">Episodes</h3>
+        <div class="podcontainer">
+            {% for episode in podcast.episodes.all %}
+            <div class="podcast-epi">
+                <!-- <a href="{% url 'core:episode' s=episode.season e=episode.id slug=episode.slug %}">
+                </a> -->
+                <img src="{{ episode.image.url }}" alt="{{ podcast.title|slugify }}-{{ episode.title|slugify }}" style="width: 100%; height: auto;">
+                <p class="epi-id">#{{ episode.id }}</p>
+                <p class="epi-deet">{{ episode.title }}</p>
+                <div class="epi-play">
+                    <img id="pButton" style="width: 100%; height: 100%;">
                 </div>
+                <audio id="episodeaudio" preload="true" >
+                    <source src="{{ episode.audio.url }}">
+                </audio>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+</div>
+{% endblock page %}
+
+{% block card %}
+<div class="episodepage">
+{% with podcast.episode.0  as episode %}
+
+    <div class="row">
+        <div class="side">
+            <img src="{{ episode.image.url }}" alt="{{episode.title}}" style="width: 100%; height: 100%">
+        </div>
+
+        <div class="main">
+            <p style="color: gray;">{{ episode.pubDate }}</p>
+            <h3 style="padding-bottom: 4%;">{{ episode.title }}</h3>
+            <div class="epi-content">
+                <h4>DESCRIPTION</h4>
+                <p>{{ episode.summary }}</p>
+
             </div>
         </div>
-    </noscript>
-</html>
+    </div>
+    {% endwith %}
+
+</div>
+{% endblock card %}
