--- a/core/templates/core/podbase.html
+++ b/core/templates/core/podbase.html
@@ -21,11 +21,34 @@
 
         <!-- Load css file -->
         <link rel="stylesheet" href="{% static 'core/podcast.css' %}">
-        <link rel="stylesheet" href="{% static 'core/episode.css' %}">
+        <!-- <link rel="stylesheet" href="{% static 'core/episode.css' %}"> -->
 
         <!-- Load js file -->
-        <script src="{% static 'core/podcast.js' %}"></script>
-        <script src="{% static 'core/episode.js' %}"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function(){
+
+            /* menu */
+            const menuBtn = document.querySelector('.menuBtn')
+            let menuOpen = false
+            
+            menuBtn.addEventListener('click', () => {
+                const mobMenu = document.querySelector('.mobile-menu')
+                
+                if(!menuOpen){
+                    menuBtn.classList.add('open')
+                    mobMenu.classList.add('show')
+                    menuOpen= true
+                } else {
+                    menuBtn.classList.remove('open')
+                    mobMenu.classList.remove('show')
+                    menuOpen = false
+                }
+            })            
+        })
+        </script>
+
+        {% block script %}
+        {% endblock script %}
 
     </head>
 
@@ -50,7 +73,7 @@
                 {% endif %}
             </div>
 
-            <div class="menu-btn">
+            <div class="menuBtn">
                 <div class="menu-btn__burger"></div>
             </div>
         </nav>
