--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -45,13 +45,9 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 }
 #navlogo {
     position: absolute;
-    /* top: 30%; */
     left: 2%;
     top: 50%;
     transform: translate(-0%, -50%);
-    /* width: 30px;
-    height: 30px;
-    object-fit: cover; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -89,7 +85,7 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     position: absolute;
     right: 2%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-0%, -50%);
 }
 .accessbtn,
 .accessbtn:hover {
@@ -155,13 +151,12 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
 /* Mobile menu */
 
 .mobile-menu {
+    position: sticky;
     display: none;
     flex-direction: column;
     place-items: center;
     justify-content: space-between;
     background-color: #242424;
-    position: fixed;
-    top: -27px;
     width: 100%;
     opacity: 0;
     padding: 1rem;
@@ -186,11 +181,9 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
         display: none;
     }
     .access {
-        /* top: 27%; */
-        right: 3%;
+        right: 10%;
     }
     .menu-btn {
-        /* display: none; */
         display: flex;
     }
 }
@@ -198,17 +191,11 @@ p, ol, ul, a, th, td, h1, h2, h3, h4, h5, h6 {
     .topnav {
         height: 33px;
     }
-    /* #navlogo {
-        top: 24%;
-    } */
 }
 @media screen and (max-width: 342px) {
     .topnav {
         height: 30px;
     }
-    /* #navlogo > img {
-        height: 10px;
-    } */
     .accessbtn,
     .accessbtn:hover {
         font-size: 10px;
