--- a/core/static/core/podcast.css
+++ b/core/static/core/podcast.css
@@ -151,12 +151,13 @@ body {
     flex-direction: column;
     place-items: center;
     justify-content: space-between;
-    background-color: #242424;
-    width: 100%;
+    /* background-color: #242424; */
+    background-color: rgba(51, 61, 61, 0.959);    width: 100%;
     opacity: 0;
     padding: 1rem;
     transition: .4s ease-in-out;
     z-index: 2;
+    border-top: 1px #fff solid;
 }
 .mobile-menu.show {
     top: 27px;
